<resources>
    <string name="app_name">Vinilos</string>
    <string name="bienvenidos">Bienvenido!</string>
    <string name="albums">Albumes</string>
    <string name="artistas">Artistas</string>
    <string name="descripcion">Descripcion:</string>
    <string name="fecha_de_salida_al_mercado">Fecha de salida:</string>
    <string name="genero">Genero:</string>
    <string name="casa_discografica">Casa Discografica:</string>
    <string name="tracks">Tracks:</string>
    <string name="track_x">Track x</string>
...
    <string name="asociar">Asociar</string>
    <string name="nombre_del_track">Nombre del Track:</string>
    <string name="duracion">Duracion:</string>
    <string name="asociar_track">Asociar Track</string>
    <string name="duracion_del_track_en_segundos">Duracion del track en segundos:</string>
    <string name="ingresar_como_coleccionista">Ingresar como Coleccionista</string>
    <string name="ingresar_como_visitante">Ingresar como Visitante</string>
    <string name="ver">Ver</string>
    <string name="agregaralbum">agregarAlbum</string>
    <string name="portada">Portada</string>

    <string-array name="generos">
        <item>Classical</item>
...
