...
        android:paddingHorizontal="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleBienvenido" />

    <Button
        android:id="@+id/ingresarVisitante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:minWidth="290dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/custom_border"
...
